test/pos/schema-recursive-definition.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name tree-schema

define node
  field value required
    scalar string
  field child
    type node

document
  field root required
    type node
